# legacy-bridge

./: .gitignore  CI_CD_DOCUMENTATION.md  COMPREHENSIVE_SECURITY_ANALYSIS.json  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SECURITY_CHECKLIST.md  DOCUMENTATION_ENHANCEMENT_REPORT.md  Dockerfile  Dockerfile.optimized  ERROR_HANDLING_SECURITY_ANALYSIS.md  FINAL_SECURITY_AUDIT_SUMMARY.md  HANDOFF_LOG.md  INPUT_VALIDATION_REPORT.md  LEGACYBRIDGE_BUILD_SPEC_2.md  MCP_SERVER_INTEGRATION_ANALYSIS.md  MEMORY_POOL_INTEGRATION_REPORT.md  Makefile  NEW_AGENT_BUILD_PROMPT_2.md  PERFORMANCE_REPORT.md  README.md  SECURE_COMMANDS_EXAMPLE.rs  SECURE_ERROR_HANDLING_IMPLEMENTATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  THREAD_POOL_IMPLEMENTATION_REPORT.md  UNIFIED_ERROR_HANDLING_ARCHITECTURE.md  claude.md  docker-compose.yml  frontend_memory_leak_fixes.md  legacy-bridge-description.md  legacy-bridge-techstack.md  legacy-improvement.md  memory_leak_fixes.patch  memory_pool_optimization.rs  openhands-legacy-bridge-suggestions.md  orchestrator-agent-prompt.md  performance_analysis_report.md  performance_monitoring.rs  performance_test.rs  rovodev-legacy-bridge-improvement-plan.md  rovodev-legacy-bridge-report.md  (+11 more)
docs/: README.md
handoffs/: index.md
k8s/: configmap.yaml  deployment-optimized.yaml  deployment.yaml  ingress.yaml  monitoring.yaml
legacy-bridge/: .gitignore  CI_CD_DOCUMENTATION.md  DEPLOYMENT_SECURITY_CHECKLIST.md  DOCUMENTATION_ENHANCEMENT_REPORT.md  Dockerfile  ERROR_HANDLING_SECURITY_ANALYSIS.md  FINAL_SECURITY_AUDIT_SUMMARY.md  INPUT_VALIDATION_REPORT.md  LEGACYBRIDGE_BUILD_SPEC_2.md  MCP_SERVER_INTEGRATION_ANALYSIS.md  NEW_AGENT_BUILD_PROMPT_2.md  PERFORMANCE_REPORT.md  SECURE_COMMANDS_EXAMPLE.rs  SECURE_ERROR_HANDLING_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_RECOMMENDATIONS.md  WARP-LEGACY-BRIDGE-REPORT.MD  claude.md  frontend_memory_leak_fixes.md  legacy-bridge-description.md  legacy-improvement.md  memory_leak_fixes.patch  memory_pool_optimization.rs  performance_monitoring.rs  performance_test  performance_test.rs  rtf_parser_simd.rs  rust_memory_optimization.md  test_md_to_rtf.md  test_memory_pools_advanced  test_memory_pools_optimized  validate_performance_claims.py  zero_copy_strings.rs
legacy-bridge/legacybridge/dll-build/: Cargo.toml
legacy-bridge/legacybridge/dll-build/src/: ffi.rs  ffi_32bit_safe.rs  ffi_monitored.rs  ffi_stubs_impl.rs
legacy-bridge/legacybridge/dll-build/src/conversion/: markdown_parser.rs  rtf_generator.rs  rtf_parser.rs
legacy-bridge/legacybridge/dll-build/src/monitoring/: mod.rs
legacybridge/: .eslintrc.json  32BIT_COMPATIBILITY_REPORT.md  API_REFERENCE.md  BUILD_GUIDE.md  BUILD_OPTIMIZATION_REPORT.md  CONSOLIDATION_REPORT.md  DLL_INTEGRATION_GUIDE.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  ENTERPRISE_INSTALLATION_GUIDE.md  ENTERPRISE_SCALABILITY_REPORT.md  ENTERPRISE_TESTING_REPORT.md  FFI_EXPORT_SUMMARY.md  FINAL_TEST_REPORT.md  PIPELINE_IMPLEMENTATION_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY_REPORT.md  SECURITY_VERIFICATION_REPORT.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  build-dll-cross-platform.sh  build-dll-simple.sh  frontend-integration-example.ts  integration_test_suite.sh  jest.config.js  package-lock.json  package.json  perf_test.c  playwright.config.ts  quick_validation_test.sh  test-security.sh  test_32bit_compatibility.c  test_32bit_compatibility.sh  test_dll.py  tsconfig.json  vitest.config.ts
legacybridge/dll-build/: Cargo.toml
legacybridge/dll-build/src/: ffi_32bit_safe.rs  ffi_monitored.rs  ffi_stubs_impl.rs  lib.rs
legacybridge/dll-build/src/conversion/: benchmarks.rs  markdown_parser_tests.rs  mod.rs  secure_generator.rs  security_test.rs  types.rs
legacybridge/dll-build/src/monitoring/: mod.rs
legacybridge/src-tauri/: Cargo.toml  MD_RTF_TEST_SUMMARY.md  SECURITY_TEST_REPORT.md  build.rs  memory_profile_comparison  quick_security_check.sh  run_security_tests.sh  security.config.json  tauri.conf.json  test_core  test_core.rs  test_md_rtf_conversion.sh
legacybridge/src-tauri/benches/: memory_pool_bench.rs  performance_benchmarks.rs
legacybridge/src-tauri/examples/: test_rtf_parser.rs  thread_pool_demo.rs
legacybridge/src-tauri/src/: commands.rs  commands_secure.rs  ffi.rs  ffi_edge_case_tests.rs  ffi_error_bridge.rs  ffi_secure.rs  ffi_tests.rs  ffi_updated_example.rs  lib.rs  main.rs  memory_pool_optimization.rs  memory_profile.rs  memory_profile_comparison.rs  panic_handler.rs  performance_benchmarks.rs  performance_test_optimized.rs  security.rs  unified_ffi.rs
legacybridge/src-tauri/src/conversion/: error.rs  input_validation.rs  input_validation_safe.rs  malicious_input_tests.rs  markdown_generator.rs  markdown_generator_pooled.rs  markdown_parser.rs  markdown_parser_optimized.rs  markdown_parser_optimized_v2.rs  markdown_parser_perf.rs  mod.rs  mod_unified.rs  rtf_generator.rs  rtf_generator_optimized.rs  rtf_generator_tests.rs  rtf_lexer.rs  rtf_lexer_pooled.rs  rtf_lexer_simd.rs  rtf_parser.rs  rtf_parser_optimized.rs  rtf_parser_pooled.rs  secure_error_handling.rs  secure_parser.rs  security.rs  security_patches_test.rs  simd_benchmarks.rs  simd_conversion.rs  string_interner.rs  string_interner_optimized.rs  unified_architecture.md  unified_config.rs  unified_errors.rs  unified_errors_test.rs  unified_generator.rs  unified_parser.rs
legacybridge/src-tauri/src/pipeline/: adaptive_thread_pool.rs  concurrent_processor.rs  error_recovery.rs  formatting_engine.rs  formatting_engine_optimized.rs  md_to_rtf_tests.rs  mod.rs  template_system.rs  test_pipeline.rs  validation_layer.rs
legacybridge/src-tauri/tests/: thread_pool_integration.rs
legacybridge/src-tauri/tests/security/: dos_resistance_tests.rs  fuzzing_tests.rs  injection_tests.rs  mod.rs  performance_security_tests.rs
legacybridge/src-tauri/tests/security/samples/malicious/: billion_laughs.rtf  deep_nesting.rtf  integer_overflow.rtf  object_injection.rtf  path_traversal.rtf  xss_injection.md
memory-bank/: activeContext.md
terraform/: main.tf
test_docs/: medium.md  small.md  xlarge.md
(+317 files in other folders)
