[package]
name = "legacybridge"
version = "0.0.0"
description = "LegacyBridge - Convert legacy code to modern frameworks"
authors = ["you"]
edition = "2021"

[lib]
name = "legacybridge"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "fs-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
base64 = "0.21"
regex = "1.10"
chrono = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]